--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "angular-animate": "^1.6.5",
     "angular-sanitize": "^1.6.5",
     "angular-ui-bootstrap": "^2.5.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "q": "^1.5.0",
     "request": "^2.81.0"
   },
