--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "mongoose": "^4.11.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "q": "^1.5.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {},
   "scripts": {
